--- a/index.html
+++ b/index.html
@@ -8,97 +8,57 @@
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm"></script>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f2f2f7;
+      font-family: sans-serif;
       text-align: center;
-      padding: 20px;
-      color: #333;
+      padding: 40px;
+      background: #f7f8fa;
     }
-
     h1 {
-      font-size: 24px;
-      margin-bottom: 20px;
+      font-size: 22px;
+      margin-bottom: 10px;
     }
-
     #countdown {
-      font-size: 32px;
-      background: #fff;
-      padding: 15px 20px;
-      border-radius: 12px;
-      margin-bottom: 25px;
-      display: inline-block;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-    }
-
-    .profile {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      font-size: 36px;
       margin-bottom: 30px;
     }
-
     .profile img {
-      width: 90px;
-      height: 90px;
+      width: 64px;
+      height: 64px;
       border-radius: 50%;
       margin-bottom: 10px;
     }
-
-    #name {
-      font-size: 20px;
-      font-weight: 600;
-    }
-
     .button-row {
       display: flex;
       justify-content: center;
       gap: 10px;
       margin-bottom: 20px;
     }
-
-    .invite-button,
-    .share-button {
-      height: 52px;
+    .invite-button, .share-button {
       display: inline-flex;
       align-items: center;
-      justify-content: center;
       background: #0088cc;
       color: white;
-      font-size: 16px;
+      padding: 10px 16px;
       border: none;
-      border-radius: 12px;
+      border-radius: 8px;
+      font-size: 16px;
       cursor: pointer;
-      transition: all 0.2s ease;
+      transition: background 0.3s;
     }
-
-    .invite-button {
-      flex: 1.4;
-      min-width: 200px;
+    .invite-button svg, .share-button svg {
+      width: 20px;
+      height: 20px;
+      margin-left: 8px;
     }
-
-    .share-button {
-      width: 52px;
-      padding: 0;
+    .copied {
+      background: #44c767 !important;
     }
-
-    .copied::after {
-      content: "✓";
-      margin-left: 10px;
-      font-size: 18px;
-      vertical-align: middle;
-    }
-
     a.button {
       display: inline-block;
-      width: 100%;
-      max-width: 280px;
-      margin: 0 auto;
+      padding: 10px 20px;
       background: #0088cc;
       color: white;
-      font-size: 16px;
-      padding: 14px 20px;
-      text-align: center;
-      border-radius: 12px;
+      border-radius: 8px;
       text-decoration: none;
     }
   </style>
@@ -113,11 +73,24 @@
   </div>
 
   <div class="button-row">
-    <button class="invite-button" id="copyBtn">Пригласить</button>
-    <button class="share-button" id="shareBtn">📤</button>
+    <button class="invite-button" id="copyBtn">
+      Пригласить
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-4 4h4a2 2 0 012 2v6a2 2 0 01-2 2h-8a2 2 0 01-2-2v-6a2 2 0 012-2z" />
+      </svg>
+    </button>
+
+    <button class="share-button" id="shareBtn">
+      Поделиться
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M15 8a3 3 0 11-6 0 3 3 0 016 0zm6 6a3 3 0 11-6 0 3 3 0 016 0zm-6 6a3 3 0 11-6 0 3 3 0 016 0z" />
+      </svg>
+    </button>
   </div>
 
-  <a href="leaderboard.html" class="button">🏆 Таблица лидеров</a>
+  <a href="leaderboard.html" class="button">Таблица лидеров</a>
 
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
@@ -127,7 +100,7 @@
 
     const supabase = createClient(
       'https://fiuybsclifxxhnpkdcfj.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...'
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpdXlic2NsaWZ4eGhucGtkY2ZqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgxNDY0NDksImV4cCI6MjA2MzcyMjQ0OX0.FMM504dMKv8DclfPeGtZS7pLja0YY6d7ODgyeRdDZgg'
     );
 
     const profile = document.getElementById('profile');
@@ -142,8 +115,8 @@
       const now = new Date().getTime();
       const diff = deadline - now;
       if (diff <= 0) return countdown.innerText = "00:00:00";
-      const h = String(Math.floor((diff / 3600000) % 24)).padStart(2, '0');
-      const m = String(Math.floor((diff / 60000) % 60)).padStart(2, '0');
+      const h = String(Math.floor((diff / (1000 * 60 * 60)) % 24)).padStart(2, '0');
+      const m = String(Math.floor((diff / (1000 * 60)) % 60)).padStart(2, '0');
       const s = String(Math.floor((diff / 1000) % 60)).padStart(2, '0');
       countdown.innerText = `${h}:${m}:${s}`;
     };
@@ -153,21 +126,33 @@
     const user = tg.initDataUnsafe?.user;
 
     if (user) {
-      profile.style.display = "flex";
+      const fullName = [user.first_name, user.last_name].filter(Boolean).join(' ');
       avatar.src = user.photo_url;
-      nameEl.innerText = [user.first_name, user.last_name].filter(Boolean).join(" ");
+      nameEl.innerText = fullName;
+      profile.style.display = "block";
 
-      const refLink = `https://t.me/GiftsCalendar_bot/miniapp?startapp=ref=${user.id}`;
+      const refLink = `https://t.me/GiftsCalendar_bot?startapp=ref${user.id}`;
+
       copyBtn.onclick = () => {
         navigator.clipboard.writeText(refLink).then(() => {
           copyBtn.classList.add("copied");
-          setTimeout(() => copyBtn.classList.remove("copied"), 2000);
+          copyBtn.innerHTML = 'Скопировано ✓';
+          setTimeout(() => {
+            copyBtn.classList.remove("copied");
+            copyBtn.innerHTML = `Пригласить
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-4 4h4a2 2 0 012 2v6a2 2 0 01-2 2h-8a2 2 0 01-2-2v-6a2 2 0 012-2z" />
+              </svg>`;
+          }, 2000);
         });
       };
 
+      // Вариант пересылки сообщения, отправленного ботом заранее
+      const MESSAGE_ID = 14;
       shareBtn.onclick = () => {
-        tg.openTelegramLink(`https://t.me/share/url?url=${encodeURIComponent(refLink)}&text=${encodeURIComponent("🎁 Попробуй выиграть стикеры, подарки и TON!")}`);
-      };
+        tg.openTelegramLink("https://t.me/GiftsCalendar_bot?start=share");
+    };
 
       const urlParams = new URLSearchParams(window.location.search);
       const refId = Number(urlParams.get("ref"));
@@ -179,16 +164,24 @@
         .single();
 
       if (!existingUser && user.id !== refId) {
-        await supabase.from("users").insert({
+        const { error } = await supabase.from("users").insert({
           telegram_id: user.id,
           username: user.username,
           photo_url: user.photo_url,
           referred_by: refId || null
         });
+        if (error) console.error("Ошибка при сохранении:", error);
       }
     } else {
-      alert("❗ Открой через Telegram Mini App.");
+      alert("❗ Открой мини-приложение через Telegram. Данные не получены.");
     }
   </script>
 </body>
 </html>
+
+    }
+  </script>
+</body>
+</html>
+
+
